--- a/highscores.html
+++ b/highscores.html
@@ -10,14 +10,16 @@
 
 <body>
 
+    <h1>Highscores</h1>
+
+    <h2 id="nameScore"></h2>
 
 
 
 
 
 
-
-    <script> scr = "./index.js"</script>
+    <script src="./highscores.js"></script>
 </body>
 
 </html>
