--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
     <div id="End" class="hideClass">
         <h1 id="endTitle">All Done!</h1>
         <h2 id="finalScore"></h2>
-        <h2 id="settingName">Enter initials: <textarea id="putName"></textarea><button id="submit">submit</button> </h2>
+        <ul id="scoreboard"></ul>
+        <h2 id="settingName">Enter initials: <input id="putName"></input><button onclick="gotoHighscore()"
+                id="submit">submit</button> </h2>
     </div>
     <script src="./index.js"></script>
 </body>
