--- a/highscores.html
+++ b/highscores.html
@@ -5,19 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/style.css">
     <title>Document</title>
 </head>
 
 <body>
 
-    <h1>Highscores</h1>
+    <h1 id="highScoreEnd">Highscores</h1>
 
-    <h2 id="nameScore"></h2>
-
-
+    <div id="nameScore"></div>
 
 
-    <script src="./highscores.js"></script>
+
+
+    <script src="./assets/highscores.js"></script>
 </body>
 
 </html>
