--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <title>Document</title>
+    <title>Nintendo Code Quiz</title>
 </head>
 <header>
     <h1 class="viewHighcore"><a href="./highscores.html">View Highscore</a></h1>
